# aoc2023

./: .gitignore  README.md  aoc2023.Dockerfile  compose.yaml  deb.Dockerfile  docker-compose.yml  justfile  pyproject.toml
.devcontainer/: alpine.Dockerfile  devcontainer.json  mattcl.aoc2023.Dockerfile
aoc/: cli.py  day01.ipynb  day01.py  day02.py
tests/: test_day01.py  test_day02.py
